1. Change profile head photo. 2. Add hand icon on modal link and close button

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,15 @@
 	overflow-y: auto;
 }
 
+.button-icon,
+.modal-btn{
+	cursor: pointer;				
+}
+
+h2{
+	font-weight: bold;				
+}
+
 #mail{
 	text-transform: lowercase;				
 }
